[package]
name = "pkt-lib"
version = "0.8.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"], optional = true}

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[features]
listener = ["tokio"]
sender = []
